# winterfell

./: Cargo.toml
air/: Cargo.toml
air/src/: lib.rs  options.rs
air/src/air/: aux.rs  coefficients.rs  context.rs  mod.rs  tests.rs  trace_info.rs
air/src/air/logup_gkr/: mod.rs
air/src/air/transition/: degree.rs  mod.rs
air/src/proof/: context.rs  mod.rs  ood_frame.rs  queries.rs
air/src/proof/logup_gkr/: composition_polynomials.rs  mod.rs
crypto/: Cargo.toml
crypto/benches/: hash.rs  inversion.rs  merkle.rs
crypto/src/: lib.rs
crypto/src/hash/: mod.rs
crypto/src/hash/blake/: mod.rs
crypto/src/hash/rescue/: mod.rs
crypto/src/merkle/: mod.rs  proofs.rs  tests.rs
crypto/src/random/: default.rs  mod.rs
crypto/src/test/: mod.rs
examples/: Cargo.toml
examples/src/: lib.rs  main.rs  tests.rs
examples/src/fibonacci/: utils.rs
examples/src/fibonacci/fib2/: mod.rs  prover.rs
examples/src/fibonacci/fib8/: mod.rs  prover.rs
examples/src/fibonacci/fib_small/: prover.rs
examples/src/fibonacci/mulfib2/: air.rs  mod.rs  prover.rs
examples/src/logup/: prover.rs  tests.rs
examples/src/logup_gkr/: air.rs  mod.rs  prover.rs  tests.rs
examples/src/logup_plain/: air.rs  mod.rs  tests.rs
examples/src/merkle/: prover.rs
examples/src/rescue/: prover.rs
examples/src/rescue_raps/: prover.rs  tests.rs
examples/src/rpo_hash_cycle/: air.rs  mod.rs  prover.rs  tests.rs
examples/src/signature/: air.rs  mod.rs  prover.rs
examples/src/utils/: rescue.rs
fri/: Cargo.toml
fri/src/: lib.rs  options.rs  proof.rs  utils.rs
fri/src/folding/: mod.rs
fri/src/prover/: mod.rs  tests.rs
fri/src/verifier/: channel.rs  mod.rs
math/: Cargo.toml
math/benches/: field.rs  inv.rs
math/src/: lib.rs
math/src/fft/: mod.rs
math/src/field/: mod.rs
math/src/polynom/: mod.rs  multi_linear.rs  univariate.rs
math/src/utils/: mod.rs
prover/: Cargo.toml
prover/benches/: lagrange_kernel.rs  logup_gkr.rs
prover/src/: channel.rs  domain.rs  errors.rs  lib.rs
prover/src/composer/: mod.rs
prover/src/constraints/: commitment.rs  composition_poly.rs  evaluation_table.rs  evaluator.rs  periodic_table.rs
prover/src/logup_gkr/: error.rs  mod.rs  prover.rs  test.rs
prover/src/matrix/: col_matrix.rs
prover/src/sum_check/: mod.rs
prover/src/tests/: mod.rs
prover/src/trace/: mod.rs  poly_table.rs  tests.rs  trace_table.rs
stark-signature/: Cargo.toml
stark-signature/benches/: sign_verify.rs  signing.rs
stark-signature/src/: lib.rs  main.rs
stark-signature/src/signature/: mod.rs
stark-signature/src/stark/: air.rs  mod.rs  prover.rs
sumcheck/src/: lib.rs
sumcheck/src/prover/: mod.rs  plain.rs
sumcheck/src/verifier/: mod.rs
utils/core/src/: lib.rs
verifier/: Cargo.toml
verifier/src/: channel.rs  composer.rs  evaluator.rs  lib.rs
verifier/src/logup_gkr/: mod.rs
winterfell/: Cargo.toml
winterfell/src/: lib.rs  tests.rs
winterfell/src/tests/: logup_gkr_simple.rs
(+58 files in other folders)
