[package]
name = "stark-signature"
version = "0.1.0"
edition = "2021"


[lib]
bench = false

[[bench]]
name = "sign_verify"
harness = false

[features]
concurrent = ["crypto/concurrent", "math/concurrent", "utils/concurrent", "prover/concurrent", "std"]
default = ["std"]
std = ["air/std", "crypto/std", "math/std", "utils/std"]

[dependencies]
air = { version = "0.9", path = "../air", package = "winter-air", default-features = false }
crypto = { version = "0.9", path = "../crypto", package = "winter-crypto", default-features = false }
math = { version = "0.9", path = "../math", package = "winter-math", default-features = false }
utils = { version = "0.9", path = "../utils/core", package = "winter-utils", default-features = false }

rand-utils = { version = "0.9", path = "../utils/rand", package = "winter-rand-utils" }
prover = { version = "0.9", path = "../prover", package = "winter-prover", default-features = false }
verifier = { version = "0.9", path = "../verifier", package = "winter-verifier", default-features = false }
serde = { version = "1.0", features = [ "derive" ], optional = true, default-features = false }
rand_chacha = { version = "0.3", default-features = false }
hex = { version = "0.4", optional = true }
structopt = { version = "0.3", default-features = false }
tracing = { version = "0.1", default-features = false }
tracing-forest = { version = "0.1", features = ["ansi", "smallvec"], optional = true }
tracing-subscriber = { version = "0.3", features = ["std", "env-filter"] }
blake3 = { version = "1.5", default-features = false }

libc-print = "0.1.23"
rand =  { version = "0.8" }

[dev-dependencies]
criterion = "0.5"
rand-utils = { version = "0.9", path = "../utils/rand", package = "winter-rand-utils" }
